update highlight mode

--- a/src/modules/Callouts/main.scss
+++ b/src/modules/Callouts/main.scss
@@ -93,7 +93,7 @@
       border-left-width: 4px;
     }
     .callout-content {
-      background-color: rgba(var(--ctp-crust));
+      background-color: rgba(var(--ctp-mantle));
     }
     .callout-title {
       background-color: rgba(var(--callout-color), 0.1);
