--- a/src/modules/default-variables.scss
+++ b/src/modules/default-variables.scss
@@ -126,11 +126,11 @@
 }
 .theme-dark {
       color-scheme: dark;
-    //--highlight-mix-blend-mode: lighten;
+    --highlight-mix-blend-mode: none;
 }
 .theme-light {
       color-scheme: light;
-    //--highlight-mix-blend-mode: darken;
+    --highlight-mix-blend-mode: none;
 }
 body {
   --anp-rainbow-folder-bg-opacity: 1;
