Add fallback value for table width

--- a/src/modules/default-variables.scss
+++ b/src/modules/default-variables.scss
@@ -141,4 +141,5 @@ body {
   --anp-header-margin-value: 10px;
   --anp-header-font: "Noto Serif";
   --tab-stacked-pane-width: var(--file-line-width);
+  --anp-table-width-pct: 100%;
 }
