--- a/theme.css
+++ b/theme.css
@@ -1339,6 +1339,14 @@ hr {
   width: var(--anp-table-width-pct);
 }
 
+.anp-table-auto .markdown-rendered table {
+  margin: 0 auto;
+}
+
+.anp-table-width .markdown-rendered table {
+  width: var(--anp-table-width-pct);
+}
+
 /*----------------CALLOUTS-------------------*/
 .anp-callout-toggle.anp-callout-sleek:not(.anp-callout-normal-toggle) .callout:not(.is-collapsible) {
   padding: 0px;
