--- a/src/modules/Callouts/main.scss
+++ b/src/modules/Callouts/main.scss
@@ -47,12 +47,12 @@
         .callout-title {
           background-color: rgba(var(--callout-color), 0.1);
           padding: 10px 0px 10px 10px;
-          border-bottom: 1px dashed;
           border-color: rgba(var(--callout-color), 0.4);
           cursor: pointer;
         }
         .callout-content {
           padding: 10px 10px 0 15px;
+          border-top: 1px dashed rgba(var(--callout-color), 0.4);
         }
       }
     }
