--- a/theme.css
+++ b/theme.css
@@ -1392,12 +1392,12 @@ hr {
 .anp-callout-toggle.anp-callout-sleek .callout.is-collapsible:not(.is-collapsed) .callout-title {
   background-color: rgba(var(--callout-color), 0.1);
   padding: 10px 0px 10px 10px;
-  border-bottom: 1px dashed;
   border-color: rgba(var(--callout-color), 0.4);
   cursor: pointer;
 }
 .anp-callout-toggle.anp-callout-sleek .callout.is-collapsible:not(.is-collapsed) .callout-content {
   padding: 10px 10px 0 15px;
+  border-top: 1px dashed rgba(var(--callout-color), 0.4);
 }
 .anp-callout-toggle.anp-callout-sleek .callout:not(.is-collapsible) {
   padding: 0px;
