--- a/src/modules/UI/general-ui.scss
+++ b/src/modules/UI/general-ui.scss
@@ -79,3 +79,7 @@
 .anp-editor-font-toggle .markdown-source-view.mod-cm6:not(.is-live-preview) .cm-scroller {
   font-family: var(--anp-editor-font);
 }
+/*-Highlighted gutter number-*/
+.cm-lineNumbers .cm-gutterElement.cm-active {    
+  color:  var(--interactive-accent) !important;
+}
