Overhaul scss files and add primary

--- a/src/modules/Note/decorations.scss
+++ b/src/modules/Note/decorations.scss
@@ -10,6 +10,7 @@
   border-radius: 4px;
   padding: 2px;
 }
+// Internal links have no underline
 .markdown-rendered .internal-link {
   &:hover, &:active, &.is-unresolved:hover, &.is-unresolved {
     text-decoration-line: none;
@@ -19,11 +20,14 @@
 .cm-formatting-link-string {
   color: var(--text-normal);
 }
+// External links have underline but no icon
 .external-link,
 .external-link:hover {
   background-image: none;
   padding-right: 0px;
 }
+
+// Editor colors follow the same color as in reading mode
 .cm-s-obsidian span {
   &.cm-formatting-strong, &.cm-strong {
     color: var(--bold-color);
