--- a/src/base.scss
+++ b/src/base.scss
@@ -1,10 +1,9 @@
-@import "modules/style-settings.scss";
-@import "modules/default-colorschemes.scss";
-@import "modules/default-variables.scss";
-@import "modules/UI/index.scss";
-@import "modules/Markdown/index.scss";
+@import "modules/Core/index.scss";
+@import "modules/Base/index.scss";
+@import "modules/Note/index.scss";
+@import "modules/Tabs/index.scss";
 @import "modules/Callouts/index.scss";
-@import "modules/Rainbow/index.scss";
-@import "modules/Alt-Tabs/index.scss";
-@import "modules/Misc/index.scss";
+@import "modules/Features/index.scss";
 @import "modules/Plugins/index.scss";
+@import "modules/Rainbow/index.scss";
+@import "modules/Misc/index.scss";
