--- a/theme.css
+++ b/theme.css
@@ -231,6 +231,10 @@ settings:
         level: 2
         collapsed: true
     - 
+        id: anp-toggle-metadata
+        title: Hide metadata
+        type: class-toggle
+    - 
         id: anp-tooltip-toggle
         title: Disable tooltips
         type: class-toggle
@@ -555,6 +559,22 @@ settings:
         type: variable-number
         default: 40
         format: px
+    - 
+        id: anp-translucency-header
+        title: Translucency
+        type: heading
+        level: 2
+        collapsed: true
+    -
+        id: anp-translucent-left
+        title: Enable translucency styling
+        type: class-toggle
+    - 
+        id: anp-translucency-opacity
+        title: Window opacity
+        description: In decimal
+        type: variable-number
+        default: 0.15
 */
 /*------------------Defining Colorschemes-------------------*/
 .theme-light, .theme-light.ctp-latte {
@@ -1138,6 +1158,44 @@ body.is-focused.anp-card-layout .workspace-tabs.mod-top {
   margin-left: 24px !important;
 }
 
+body.is-translucent {
+  background-color: transparent;
+  --workspace-background-translucent: rgba(var(--ctp-crust), var(--anp-translucency-opacity));
+}
+
+.is-translucent:not(.is-fullscreen) {
+  --nav-collapse-icon-color: rgba(var(--mono-rgb-100), 0.3);
+  --nav-collapse-icon-color-collapsed: rgba(var(--mono-rgb-100), 0.3);
+  --divider-color: rgba(var(--ctp-surface0), 0.15);
+}
+
+.is-translucent.anp-translucent-left:not(.is-fullscreen) .workspace-ribbon.mod-left,
+.is-translucent.anp-translucent-center:not(.is-fullscreen) .workspace-tabs,
+.is-translucent.anp-translucent-left:not(.is-fullscreen) .mod-left-split .workspace-tab-header-container,
+.is-translucent.anp-translucent-right:not(.is-fullscreen) .mod-right-split .workspace-tab-header-container,
+.is-translucent.anp-translucent-center:not(.is-fullscreen) .mod-top .workspace-tab-header-container,
+.is-translucent.anp-translucent-center:not(.is-fullscreen) .workspace-tabs .workspace-leaf,
+.is-translucent.anp-translucent-left:not(.is-fullscreen) .workspace-ribbon.mod-left:before,
+.is-translucent.anp-translucent-center:not(.is-fullscreen) .workspace-split.mod-root,
+.is-translucent.anp-translucent-center:not(.is-fullscreen) .workspace .mod-root .workspace-tabs.mod-stacked .workspace-tab-container .workspace-tab-header,
+.is-translucent.anp-translucent-center:not(.is-fullscreen) .workspace-split.mod-root .view-content,
+.is-translucent.anp-translucent-center:not(.is-fullscreen) .view-header {
+  background-color: transparent;
+}
+
+.is-translucent .workspace {
+  background-color: transparent;
+}
+
+.is-translucent.anp-translucent-center:not(.is-fullscreen) .view-header-title-container:not(.mod-at-end):after {
+  background-image: none;
+}
+
+.is-translucent .workspace-split.mod-left-split.is-sidedock-collapsed .workspace-tabs,
+.is-translucent .workspace-split.mod-right-split.is-sidedock-collapsed .workspace-tabs {
+  visibility: hidden;
+}
+
 /*-Blockquote spacing-*/
 .markdown-rendered blockquote {
   padding: 5px 5px 5px 10px;
@@ -1285,6 +1343,10 @@ span[alt=anp-embed] .markdown-embed .markdown-embed-title, .anp-embed-toggle .ma
 hr {
   margin-block-start: 5px;
   margin-block-end: 5px;
+}
+
+.anp-toggle-metadata .frontmatter-container {
+  display: none;
 }
 
 /*-Recolor table borders-*/
