Separate stacked tab header from normal tab

--- a/src/modules/Base/index.scss
+++ b/src/modules/Base/index.scss
@@ -3,4 +3,6 @@
 @import "general-ui.scss";
 @import "layouts.scss";
 @import "settings-page.scss";
+@import "settings-page.scss";
+@import "stacked-tabs.scss";
 @import "translucency.scss";
