--- a/src/modules/Tabs/safari-tabs.scss
+++ b/src/modules/Tabs/safari-tabs.scss
@@ -1,5 +1,6 @@
-.anp-alternate-tab-toggle .workspace-tab-header-container {
+.anp-alternate-tab-toggle, .anp-default-tab {
   --header-height: var(--anp-alt-tab-custom-height, 40px);
+  --tab-stacked-header-width: var(--anp-stacked-header-width, 40px);
 }
 .anp-alternate-tab-toggle .workspace-tabs:not(.mod-stacked) {
   --tab-background: var(--background-secondary);
